test front end started
